Fix indicator spacing and chart sizing

--- a/src/showcase/showcase-changes.less
+++ b/src/showcase/showcase-changes.less
@@ -108,7 +108,7 @@
 }
 
 #navbar-row {
-  padding-top: 38px;
+  padding-top: 20px;
 
   #navbar-container .plot-area {
     .multi {
